# QRCode-Maker

./: .gitignore  README.md  main.py  pyproject.toml
qrcode_maker/: __init__.py  app.py  qrcode.py
