[tool.poetry]
name = "qrcode-maker"
version = "0.1.0"
description = ""
authors = ["zimolab <zimolab@aliyun.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
pyguiadapter = ">= 1.0.0"
pyside2 = "^5.15.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

pyinstaller = "^6.10.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"